fix ut increase Xmx to 16G